css/styles.css
/* ... */
.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}


/*--------------------------------------------------------------
Layouts
--------------------------------------------------------------*/

.centered {
    margin: 0 auto;
    padding: 0 1em;
}

@media screen and (min-width: 62em) {
    .centered {
        max-width: 62em;
    }
}


/*--------------------------------------------------------------
Header styles
--------------------------------------------------------------*/

.masthead {
    padding: 1em 0;
    background-color: deeppink;
}

@media screen and (min-width: 25em) {
    .site-header {
        -js-display: flex;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
    }
}

.site-branding {
    margin-right: 1em;
}

.site-branding a {
    text-decoration: none;
}

.site-branding a:focus,
.site-branding a:hover {
    text-decoration: underline white;
}

.icon-mmlogo {
    -js-display: flex;
    display: flex;
    width: .75em;
    height: .75em;
    margin-right: .35em;
    padding: .4em;
    border: 1px solid white;
}

.icon-mmlogo svg {
    width: 100%;
    height: 100%;
}

.site-title {
    font-size: 1.4em;
}

.site-title a {
    -js-display: flex;
    display: flex;
    align-items: baseline;
    margin: 0;
    font-weight: 400;
    text-align: center;
    color: white;
}

/*--------------------------------------------------------------
Mobile-first menu
--------------------------------------------------------------*/

.multi-level-nav ul {
    margin: 0;
    padding: 0;
	list-style-type: none;
}

.multi-level-nav a {
    display: block;
    padding: .6em 0;
    color: white;
    text-decoration: none;
    border-bottom: 1px solid hsla(0, 0%, 100%, .1);
    transition: all .4s;
}

.multi-level-nav a:focus,
.multi-level-nav a:hover {
    padding-left: 1em;
    background: white;
    color: #002254;
}

@media screen and (max-width: 25em){
	.multi-level-nav li li a {
		padding-left: 1em;
	}

    .multi-level-nav li li a:focus,
    .multi-level-nav li li a:hover {
        padding-left: 1.8em;
    }

    .multi-level-nav ul ul li a::before {
        margin: 0 .4em 0 -.8em ;
        content: '–';
    }

	.dropdown-toggle {
		display: none;
	}

    .multi-level-nav > ul:last-of-type > li:nth-last-child(2) > a {
        border-bottom: none;
    }

    a.reserve {
        margin-top: .4em;
        text-align: center;
        font-weight: 600;
        border: 1px solid white;

    }

    a.reserve:focus,
    a.reserve:hover {
        padding-left: 0;
        background: white;
        color: #002254;
    }
}

@media screen and (min-width: 25em){
	.multi-level-nav ul {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
	}

	.multi-level-nav li {
        flex: 1 0 auto;
		position: relative;
	}

    .multi-level-nav a {
        padding-right: 1.4em;
        border-bottom: none;
    }

    .multi-level-nav a:focus,
    .multi-level-nav a:hover {
        padding-left: 0;
        background: inherit;
        color: white;
        text-decoration: underline;
    }

	.multi-level-nav ul ul {
		display: none;
		position: absolute;
		z-index:100;
	}

	.multi-level-nav ul ul li {
        flex: 1 1 auto;
	}

	.multi-level-nav ul .toggled-on {
		display: flex;
	}

	.dropdown-toggle {
		margin: 0 -.25em 0 .25em;
		padding: 0 .25em;
		border: 0;
		content: "";
		text-transform: lowercase; /* Stop screen readers to read the text as capital letters */
		background-color: transparent;
	}

	.dropdown-toggle:after {
		position: relative;
		top: 0;
		left: 0;
        width: 1em;
		color: white;
		content: "+";
		line-height: 1em;
	}

	.dropdown-toggle:hover,
	.dropdown-toggle:focus {
		outline: solid white 1px;
	}

	.dropdown-toggle.toggle-on:after {
		content: "–";
	}

    .toggled-on {
        border: 1px solid white;
        border-top: none;
    }

    .toggled-on a {
        padding-left: .8em;
        background-color: #002254;
    }

    a.reserve {
        margin-top: .4em;
        padding: .2em .5em;
        border: 1px solid white;
        transition: none;
    }

    a.reserve:focus,
    a.reserve:hover {
        padding-left: .5em;
        background: white;
        color: #002254;
        text-decoration: none;
    }
}


/*--------------------------------------------------------------
Front page styles
--------------------------------------------------------------*/

.main-pitch {
    background: pink;
}


.featured-image {
	margin: 2em auto;
	width: 70%;
}

.featured-image figcaption {
	margin-top: 1em;
	padding-right: 30%;
	padding-left: 1em;
	font-style: italic;

	color: grey;
	border-left: 2px solid grey;
}
.main-title {
    font-size: 2.2em;
    text-align: center;
    padding-top: .5em;
}

.teaser {
    padding: 0 1em;
    font-size: 1.1em;
    padding-bottom: 1.5em;
}




/*--------------------------------------------------------------
Contact with Cupcake styles
--------------------------------------------------------------*/
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);

.container {
    
	max-width:400px;
	width:100%;
	margin:0 auto;
	position:relative;
    
}

.formtext {
    color: deeppink;

}

#contact input[type="text"], #contact input[type="email"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }

#contact {
	background:#F9F9F9;
	padding:25px;
	margin:50px 0;
    display: block;
}

.hm {
    float: right;
    margin: 10px;
    margin-left:100px;
    
}
/* ... */

